--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
     image: node:20
     container_name: laravel_node
     working_dir: /var/www/html
+    ports:
+      - "5173:5173"
     volumes:
       - .:/var/www/html
     command: sh -c "npm install && npm run dev"
