Add edits for configuration

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,6 +3,7 @@ server {
     index index.php index.html;
     root /var/www/html/public;
 
+    # Laravel PHP
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
@@ -16,5 +17,15 @@ server {
 
     location ~ /\.ht {
         deny all;
+    }
+
+    # Proxy для Vite (фронтенд)
+    location /assets/ {
+        proxy_pass http://node:5173/assets/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
