--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   # PHP + Composer
   app:
@@ -26,6 +24,7 @@ services:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
+      - node
     networks:
       - laravel
 
@@ -46,7 +45,7 @@ services:
     networks:
       - laravel
 
-  # Node (для npm run dev / build)
+  # Node (Vite)
   node:
     image: node:20
     container_name: laravel_node
@@ -55,7 +54,7 @@ services:
       - "5173:5173"
     volumes:
       - .:/var/www/html
-    command: sh -c "npm install && npm run dev"
+    command: sh -c "npm install && npm run dev -- --host 0.0.0.0"
     networks:
       - laravel
 
